<!--Declare all string names to use for each element of project-->
<resources>
    <string name="app_name">My Android App</string>
    <string name="textview">TextView</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="convert">Convert</string>
    <string name="please_enter_the_celsius_temperature">Please enter the celsius temperature</string>
    <string name="name">Celsius Temp</string>
    <string name="celsius_temp">celsius Temp</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="your_name">Your name</string>
    <string name="next">Celsius to Fahrenheit</string>
    <string name="android_logo">android logo</string>
    <string name="the_result_in_fahrenheit_is">The temperature in Fahrenheit is</string>
    <string name="result">result</string>
    <string name="fahrenheit_result">fahrenheit result</string>
    <string name="welcome_messages">Welcome, %1$s </string>
    <string name="celsius_temperature">Celsius Temperature</string>
    <string name="Mile_to_Kilometer">Mile to Kilometer</string>
    <string name="mile_to_kilometer">Mile To Kilometer</string>
    <string name="please_enter_the_mile">Please enter the mile</string>
    <string name="number_of_mile">Number of mile</string>
    <string name="the_result_in_kilometer">The result in Kilometer</string>
    <string name="mile_to_km">mile to km</string>
    <string name="welcome_user">Welcome, User </string>
    <string name="nonsense"> Please only use numbers and not some nonsense </string>
    <string name="please_choose_the_option_you_want">Please choose the option you want</string>
    <string name="back">Back</string>
    <string name="back_to_main">Back to main</string>

</resources>