<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity3">

    <!--textview, show welcome user's name-->
    <TextView
        android:id="@+id/tvWC1"
        android:layout_width="346dp"
        android:layout_height="72dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColorLink="#009688"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--textview, mile to kilometer-->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/mile_to_kilometer"
        android:textAlignment="center"
        android:textColorLink="#FF5722"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWC1"
        app:layout_constraintVertical_bias="0.0" />

    <!--textview, ask user to enter the number of mile-->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/please_enter_the_mile"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etMile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent" />

    <!--editText, place to enter the number of mile-->
    <EditText
        android:id="@+id/etMile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/number_of_mile"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <!--textview, the result in Kilometer-->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/the_result_in_kilometer"
        android:textColorLink="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvKilometerResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent" />

    <!--textview to show the result in Kilometer-->
    <TextView
        android:id="@+id/tvKilometerResult"
        android:layout_width="303dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColorLink="#F44336"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btMK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <!--convert button, to convert the number of mile to kilometer-->
    <Button
        android:id="@+id/btMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Mile to Kilometer image-->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="262dp"
        android:layout_height="134dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/mile_to_km"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMile"
        app:srcCompat="@drawable/mtk" />

    <Button
        android:id="@+id/btback1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>